add: change password & get profile routes
